--- a/geoQuiz/geoQuiz.vbproj
+++ b/geoQuiz/geoQuiz.vbproj
@@ -83,6 +83,9 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="gameController.js" />
+    <Content Include="home.html" />
+    <Content Include="style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
