--- a/geoQuiz/geoQuiz.vbproj
+++ b/geoQuiz/geoQuiz.vbproj
@@ -83,6 +83,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Country.js" />
     <Content Include="gameController.js" />
     <Content Include="general.js" />
     <Content Include="home.html" />
@@ -119,6 +120,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="countries2.json" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
