--- a/geoQuiz/geoQuiz.vbproj
+++ b/geoQuiz/geoQuiz.vbproj
@@ -120,7 +120,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="countries2.json" />
+    <Content Include="countries.json" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
