--- a/geoQuiz/Web.config
+++ b/geoQuiz/Web.config
@@ -1,16 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-  </system.web>
-  <system.webServer>
-    <staticContent>
-      <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>
-  </system.webServer>
+    <system.web>
+        <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
+        <httpRuntime targetFramework="4.5" />
+    </system.web>
+    <system.webServer>
+        <staticContent>
+            <remove fileExtension=".json"/>
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
+        <defaultDocument>
+            <files>
+              <add value="home.html" />
+            </files>
+        </defaultDocument>
+    </system.webServer>
+    <location path="home.html">
+        <system.webServer>
+            <defaultDocument>
+                <files>
+                    <add value="home.html" />
+                </files>
+            </defaultDocument>
+        </system.webServer>
+    </location>
 </configuration>
